<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MovieDetailsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Backdrop and poster images at the top of the screen-->
        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--backdrop image-->
            <ImageView
                android:id="@+id/bacdropImage_detailsFragment_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:src="@drawable/sample_backdrop" />

            <!--While line under the backdrop image-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:src="@mipmap/backdrop_liner" />

            <!--Poster image, avarage vote and imdb Icon-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/poster_moviedetail_imageView"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    tools:src="@drawable/sample_poster" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginStart="5dp">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:background="@drawable/primary_rounded_background"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/rating_moviDetails_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/custom_color_primary"
                        android:textSize="16sp" />

                </FrameLayout>

                <ImageView
                    android:id="@+id/imdb_moviedetail_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="5dp"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/ic_imdb" />

            </LinearLayout>

            <!--Adult content warning-->
            <ImageView
                android:id="@+id/adultContent_detailsFragment_imageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/red_rounded_background"
                android:padding="12dp"
                tools:srcCompat="@mipmap/adult" />
        </FrameLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout">

            <LinearLayout
                android:id="@+id/genres_moviedetail_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>


        <TextView
            android:id="@+id/title_moviedetail_itemView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_movie_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

        <TextView
            android:id="@+id/tagline_moviedetail_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_tagline"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_moviedetail_itemView" />

        <TextView
            android:id="@+id/overview_moviedetail_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_movie_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagline_moviedetail_textView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview_moviedetail_textView">

            <TextView
                android:id="@+id/otherDeails_moviedetail_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_other_details"
                android:layout_marginBottom="20dp"
                android:textColor="@color/custom_color_accent"
                android:textStyle="bold" />

            <include
                layout="@layout/other_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>